@@ -59,6 +59,12 @@ android {
 
     testOptions {
         unitTests.returnDefaultValues = true
+        unitTests.all {
+            it.jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                       '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                       '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+                       '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+        }
         animationsDisabled = true
     }
     namespace 'net.osmtracker'
@@ -87,9 +93,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.4.0'
 
-    testImplementation 'org.powermock:powermock-core:1.7.0RC2'
-    testImplementation 'org.powermock:powermock-module-junit4:1.7.0RC2'
-    testImplementation 'org.powermock:powermock-api-mockito2:1.7.0RC2'
+    testImplementation 'org.powermock:powermock-core:2.0.9'
+    testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
+    testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
 
     // Required for instrumented tests
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -111,7 +117,7 @@ dependencies {
 
 configurations.all {
     // it's already included in Android and not need from osmapi
-    exclude group:'net.sf.kxml', module:'kxml2'
+    exclude group: 'net.sf.kxml', module: 'kxml2'
     exclude group: 'xmlpull', module: 'xmlpull'
 }
 
